Fixed issue with footer and lesson number alignment

--- a/level5-E/lesson-01/main.scss
+++ b/level5-E/lesson-01/main.scss
@@ -67,7 +67,7 @@ body {
   }
 .lesson-number {
     position: absolute;
-    left: 91.65%;
+    right: 6.5%;
     width: 1.9%;
     text-align: center;
     margin-top: 7.4%;
@@ -205,6 +205,11 @@ body {
     bottom: 43px;
     right: 6.2%;
     font-family: $title-font;
+    width: 30%;
+    span{
+      overflow-wrap: break-word;
+      display:inline-block
+    }
   }
 }
 
@@ -233,6 +238,15 @@ body {
     .act-content {
       margin-top: clamp(20px, 3.8vw, 36px);
     }
+    .lesson-number {
+      position: absolute;
+      right: 6.6%;
+      width: 1.9%;
+      text-align: center;
+      margin-top: 7.4%;
+      font-size: clamp(7px, 1.8vw, 13px);
+      color: #ffffff;
+    }
     footer {
       bottom: clamp(16px, 4.8vw, 43px);
       right: 5% !important;
@@ -240,6 +254,7 @@ body {
     }
   }
 }
+
 @media screen and (max-width: 768px) {
   .html-lesson-wrapper {
     .program-rank {
@@ -274,12 +289,16 @@ body {
     .level {
       padding: 2px 6px 2px 7px !important;
     }
+    .lesson-number {
+      margin-top: 6.9%;
+    }
     .line {
       margin: 0 6px;
       vertical-align: middle;
     }
   }
 }
+
 @media screen and (max-width: 375px) {
   .html-lesson-wrapper {
     .type {
@@ -297,6 +316,32 @@ body {
     }
     footer{
       bottom: 15px
+    }
+  }
+}
+@media screen and (max-width: 360px) {
+  .html-lesson-wrapper {
+    .see-content{
+      ul{
+        margin: 3px 0px 0px 2.4em;
+        padding: 0;
+        line-height: clamp(12px, 3vw, 26px);
+      }
+    }
+    .try-content{
+      padding-left: 2.7em;
+      ul{
+        margin-left: 1em;
+        padding: 0;
+        line-height: clamp(12px, 3vw, 26px);
+      }
+    }
+    .lesson-number {
+      margin-top: 7.2%;
+    }
+    footer {
+      width: 100%;
+      text-align: right;
     }
   }
 }
